2022-01-27  Tim Horton  <timothy_horton@apple.com>

        Remove ENABLE(HOVER_GESTURE_RECOGNIZER) and related code
        https://bugs.webkit.org/show_bug.cgi?id=235749

        Reviewed by Wenson Hsieh.

        * wtf/PlatformEnableCocoa.h:

2022-01-27  Chris Dumez  <cdumez@apple.com>

        Unreviewed fix for older macOS builds after r288577.

        * wtf/Assertions.h:

2022-01-27  Devin Rousso  <drousso@apple.com>

        Change version number for HAVE_PASSKIT_DEFAULT_SHIPPING_METHOD
        https://bugs.webkit.org/show_bug.cgi?id=235732
        <rdar://problem/88152385>

        Reviewed by Wenson Hsieh.

        * wtf/PlatformHave.h:

2022-01-27  Antti Koivisto  <antti@apple.com>

        Default to 32 bit refcount for CanMakeCheckedPtr
        https://bugs.webkit.org/show_bug.cgi?id=235723
        rdar://86602114

        Reviewed by Darin Adler.

        It is currently uint16_t for no good reason. It is no unreasonable to have an object being referenced
        by a large number of other objects.

        We just hit the first bug caused by overrunning it (in IFC).

        * wtf/CheckedRef.h:

        uint16_t -> uint32_t

2022-01-27  Ada Chan  <ada.chan@apple.com>

        Disable WebXR experimental feature by default
        https://bugs.webkit.org/show_bug.cgi?id=235688

        Reviewed by Tim Horton.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2022-01-27  Alexander Mikhaylenko  <alexm@gnome.org>

        [GTK] Support accent colors
        https://bugs.webkit.org/show_bug.cgi?id=235706

        Reviewed by Michael Catanzaro.

        * wtf/PlatformHave.h: Flip HAVE_APP_ACCENT_COLORS for GTK.

2022-01-26  Michael Catanzaro  <mcatanzaro@gnome.org>

        Build failure with GCC 12: MediaTime.h:167:71: error: call to non-'constexpr' function 'WTF::MediaTime& WTF::MediaTime::operator=(const WTF::MediaTime&)'
        https://bugs.webkit.org/show_bug.cgi?id=235610

        Reviewed by Darin Adler.
