@@ -1,3 +1,12 @@
+2022-01-28  Tim Nguyen  <ntim@apple.com>
+
+        Enable inert attribute feature flag
+        https://bugs.webkit.org/show_bug.cgi?id=235668
+
+        Reviewed by Darin Adler.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
 2022-01-27  Tim Horton  <timothy_horton@apple.com>
 
         Remove ENABLE(HOVER_GESTURE_RECOGNIZER) and related code
